# blink-lnurl-server

./: .gitignore  BLINK_PROVIDER_PLAN.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  flake.nix  rust-toolchain.toml
.github/workflows/: audit.yml  check-code.yml  spelling.yml  test-e2e.yml  test-integration.yml
bats/: auth_endpoints.bats  blink_mocked_e2e.bats  callback_domain.bats  lnurl_protocol.bats  spark_endpoints.bats
bats/helpers/: assertions.bash  common.bash
ci/: Dockerfile.test  docker-compose.ci.yml  pipeline.yml  repipe  values.yml  vendir.lock.yml  vendir.yml
ci/tasks/: build-release.sh  bump-image-digest.sh  open-charts-pr.sh  set-dev-version.sh  test-e2e.sh  update-repo.sh
crates/blink-client/: Cargo.toml
crates/blink-client/graphql/: ln_invoice_create_on_behalf_of_recipient.graphql  ln_usd_invoice_btc_denominated_create_on_behalf_of_recipient.graphql  schema.graphql
crates/blink-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/blink-client/tests/: client.rs
crates/spark-client/: Cargo.toml
crates/spark-client/src/: client.rs  error.rs  lib.rs  types.rs  webhook.rs
dev/: otel-agent-config.yaml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
migrations/postgres/: 20260610220000_provider_neutral_accounts.sql  20260619_initial.sql
migrations/sqlite/: 20260610220000_provider_neutral_accounts.sql  20260611193000_provider_invoice_metadata.sql  20260614120000_invoice_expired_state.sql  20260619_initial.sql
scripts/: start-local-stack.sh
src/: error.rs  identifier.rs  internal_auth.rs  invoice_paid.rs  main.rs  models.rs  providers.rs  repository.rs  routes.rs  state.rs  tracing.rs  user.rs  webhook_notify.rs  zap.rs
src/postgresql/: mod.rs  repository.rs
src/routes/: account.rs  internal.rs  lnurl_pay.rs  mod.rs  test_support.rs  webhook.rs  zap.rs
src/sqlite/: mod.rs  repository.rs
src/webhooks/: mod.rs  repository.rs
tests/fixtures/: internal_auth_jwks.json  internal_auth_private.pem
