[package]
name = "lnurl"
edition = "2024"
version = "0.5.0"

[workspace]
members = ["crates/blink-client", "crates/spark-client"]

[[bin]]
name = "lnurl-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1" }
base64 = "0.22.1"
bitcoin = { version = "0.32.6", features = ["serde"] }
blink-client = { path = "crates/blink-client" }
clap = { version = "4.5.40", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
hex = "0.4.3"
lightning-invoice = { version = "0.34.0", features = ["std"] }
nostr = { version = "0.44.3", default-features = false, features = ["std", "nip57"] }
nostr-sdk = { version = "0.44.1", default-features = false, features = ["nip57"] }
phonenumber = "0.3.9"
rand = "0.10.1"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "http2", "charset", "system-proxy", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spark-client = { path = "crates/spark-client" }
sqlx = { version = "0.9.0", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
x509-parser = { version = "0.18.0", features = ["verify"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }

[features]
dev = []

[lints]
clippy.suspicious = { level = "warn", priority = -1 }
clippy.complexity = { level = "warn", priority = -1 }
clippy.perf = { level = "warn", priority = -1 }
clippy.style = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.must_use_candidate = "allow"
clippy.struct_field_names = "allow"
clippy.arithmetic_side_effects = "warn"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
