[package]
name = "spark-client"
edition = "2024"
version = "0.1.1-dev"

[dependencies]
anyhow = "1.0.98"
bitcoin = { version = "0.32.6", features = ["serde"] }
hex = "0.4.3"
serde_json = "1.0.140"
spark = { git = "https://github.com/breez/spark-sdk", rev = "2c80c32db4489447af4c5600c39c272d6e8845d2", package = "spark" }
spark-wallet = { git = "https://github.com/breez/spark-sdk", rev = "2c80c32db4489447af4c5600c39c272d6e8845d2", package = "spark-wallet" }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
